--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/extension-text-align": "^2.26.1",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
